--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,11 +15,11 @@
     template_parameters:
       EcsTask: "{{ ecs_service_task }}"
       ECSCluster: "{{ ecs_service_cluster_name }}"
-      ECSServiceRole: "{% if ecs_service_iam_role is not defined and ecs_service_elb_name is defined %}{{ iam_role_cf_output.stack_outputs.RoleName }}{% else %}{{ ecs_service_iam_role|default(omit) }}{% endif %}"
-      ECSELBName: "{{ ecs_service_elb_name|default(omit) }}"
-      ContainerName: "{{ ecs_service_container_name|default(omit) }}"
-      ContainerPort: "{{ ecs_service_container_port|default(omit) }}"
-      DesiredCount: "1"
+      ECSServiceRole: "{% if ecs_service_iam_role is not defined and ecs_service_elb_name is defined %}{{ iam_role_cf_output.stack_outputs.RoleName }}{% else %}{{ ecs_service_iam_role|default('') }}{% endif %}"
+      ECSELBName: "{{ ecs_service_elb_name|default('') }}"
+      ContainerName: "{{ ecs_service_container_name|default('') }}"
+      ContainerPort: "{{ ecs_service_container_port|default(0) }}"
+      DesiredCount: "{{ ecs_service_desired_count|default(1) }}"
     stack_name: "{{ ecs_service_stack_name }}"
     region: "{{ region }}"
     template: "build/ecs_service.{{ ecs_service_stack_name }}.json"
