Removing nested variables.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -20,8 +20,8 @@
       ContainerName: "{{ ecs_service_container_name|default('') }}"
       ContainerPort: "{{ ecs_service_container_port|default(0) }}"
       DesiredCount: "{{ ecs_service_desired_count|default(1) }}"
-      DeploymentConfigurationMinHealthyPercent: "{{ ecs_service_deployment_conf.min_healthy_percent | default(0) }}"     
-      DeploymentConfigurationMaxPercent: "{{ ecs_service_deployment_conf.max_percent | default(0) }}"     
+      DeploymentConfigurationMinHealthyPercent: "{{ ecs_service_deploy_min_healthy_percent | default(0) }}"     
+      DeploymentConfigurationMaxPercent: "{{ ecs_service_deploy_max_percent | default(0) }}"     
     stack_name: "{{ ecs_service_stack_name }}"
     region: "{{ region }}"
     template: "build/ecs_service.{{ ecs_service_stack_name }}.json"
